--- a/Onliner for windows 10/Onliner for windows 10/Themes/DataTemplateStyle.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Themes/DataTemplateStyle.xaml
@@ -1,13 +1,11 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Onliner_for_windows_10.Themes"
-    xmlns:converters="using:Onliner.Converters"
-    xmlns:Interactivity="using:Microsoft.Xaml.Interactivity"
-    xmlns:Core="using:Microsoft.Xaml.Interactions.Core" 
-    xmlns:Media="using:Microsoft.Xaml.Interactions.Media"
-    xmlns:ViewModel="using:Onliner.Model.News">
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 
+    xmlns:converters="using:Onliner.Converters"
+    xmlns:model="using:Onliner.Model.News">
 
     <converters:ImageUrlConverters x:Key="ImageUrlConverter" />
     <converters:TextIcoNewsConverter x:Key="TextIcoNewsConverter"/>
@@ -43,19 +41,19 @@
                 </TransitionCollection>
             </Grid.ChildrenTransitions>
             <TextBlock x:Name="ThemeTextBlock" 
-        			Text="{Binding Themes}" 
+        			Text="{Binding Themes}"
         			Foreground="#107fdc" Margin="3,0,0,0"
         			FontSize="12" Grid.Row="0" Style="{ThemeResource CaptionTextBlockStyle}"/>
             <TextBlock x:Name="titleTextBlock"
-        			Text="{Binding Title}" 
+        			Text="{Binding Title}"
         			Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"
                     TextWrapping="WrapWholeWords"
                     TextTrimming="WordEllipsis"
         			FontSize="16" Margin="3,0,0,3"
                     ContinuumNavigationTransitionInfo.IsEntranceElement="True" Grid.Row="1" Style="{ThemeResource BodyTextBlockStyle}"/>
             <Grid Grid.Row="2">
-                <Image Name="ImageListSectionNews" Opacity="100" Source="{Binding Image, Converter={StaticResource ImageUrlConverter}}">
-                </Image>
+                <Image Name="ImageListSectionNews" Opacity="100" Source="{Binding Image, Converter={StaticResource ImageUrlConverter}}"/>
+
             </Grid>
             <Grid HorizontalAlignment="Stretch" Grid.Row="3">
                 <Grid.ColumnDefinitions>
@@ -74,7 +72,7 @@
         					Text="&#xE890;" 
         					FontFamily="Segoe MDL2 Assets"
                                    Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
-                    <TextBlock Text="{Binding Popularcount, Converter={StaticResource TextIcoNewsConverter}}" 
+                    <TextBlock Text="{Binding Popularcount, Converter={StaticResource TextIcoNewsConverter}}"
         					Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}" 
         					TextWrapping="Wrap" 
         					FontSize="12" 
@@ -89,7 +87,7 @@
         					Text="&#xE8F2;" 
         					FontFamily="Segoe MDL2 Assets" 
         					Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
-                    <TextBlock Text="{Binding CountViews, Converter={StaticResource TextIcoNewsConverter}}" 
+                    <TextBlock Text="{Binding CountViews, Converter={StaticResource TextIcoNewsConverter}}"
         					Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}" 
         					TextWrapping="Wrap" 
         					FontSize="12" 
@@ -104,7 +102,7 @@
         					Text="&#xE114;" 
         					FontFamily="Segoe MDL2 Assets"
                                    Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
-                    <TextBlock Text="{Binding Bmediaicon, Converter={StaticResource TextIcoNewsConverter}}" 
+                    <TextBlock Text="{Binding Bmediaicon, Converter={StaticResource TextIcoNewsConverter}}"
         					Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}" 
         					TextWrapping="Wrap" 
         					FontSize="12" 
@@ -119,7 +117,7 @@
         					Text="&#xE116;" 
         					FontFamily="Segoe MDL2 Assets"
                                    Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
-                    <TextBlock Text="{Binding Mediaicongray}" 
+                    <TextBlock Text="{Binding Mediaicongray}"
         					Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}" 
         					TextWrapping="Wrap" 
         					FontSize="12" Margin="3,0,0,0"/>
@@ -128,14 +126,14 @@
             </Grid>
             
             <TextBlock x:Name="subtitleTextBlock" 
-        			Text="{Binding Description}" 
+        			Text="{Binding Description}"
         			Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"
         			TextWrapping="WrapWholeWords" 
         			TextTrimming="WordEllipsis"
         			Padding="5" 
         			FontSize="12"  
         			TextAlignment="Justify" Grid.Row="4"/>
-            <TextBlock x:Name="descriptionTextBlock" 
+            <TextBlock x:Name="descriptionTextBlock"
         			Text="{Binding Footer}"  TextAlignment="Right"
         			Foreground="Gray" Padding="2"
         			TextWrapping="WrapWholeWords" FontSize="12" Grid.Row="5" Style="{ThemeResource BaseTextBlockStyle}"/>
