--- a/Onliner for windows 10/Onliner for windows 10/Themes/ThemeStyle.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Themes/ThemeStyle.xaml
@@ -1,7 +1,6 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Onliner_for_windows_10.Themes">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
 
     <!--Background color default-->
