--- a/Onliner for windows 10/Onliner for windows 10/Themes/StringResource.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Themes/StringResource.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Onliner_for_windows_10.Themes">
+    xmlns:local="using:OnlinerApp.Themes">
     <x:String x:Key="WeatherDaySVG">M593.235,286.701h-82.711c-10.773,0-19.113,8.378-19.113,19.128s8.34,19.425,19.113,19.425h82.711
 			c10.772,0,19.113-8.675,19.113-19.425S604.008,286.701,593.235,286.701zM464.305,175.861l58.378-59.09c7.451-7.562,7.726-18.832,0-27.136c-7.229-7.71-19.157-8.007-27.105,0l-58.386,59.09
 			c-7.443,7.562-7.992,19.128,0,27.135C444.494,183.127,457.047,183.201,464.305,175.861zM464.305,436.836c-7.999-8.007-20.158-8.007-27.113,0c-7.992,6.969-7.488,19.647,0,27.136l58.386,58.348
