--- a/Onliner for windows 10/Onliner for windows 10/App.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/App.xaml
@@ -1,5 +1,5 @@
 ﻿<common:BootStrapper
-    x:Class="Onliner_for_windows_10.App"
+    x:Class="OnlinerApp.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:common="using:Template10.Common"
