--- a/Onliner for windows 10/Onliner for windows 10/PrivacyPolicy.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/PrivacyPolicy.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="Onliner_for_windows_10.PrivacyPolicy"
+    x:Class="OnlinerApp.PrivacyPolicy"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Onliner_for_windows_10"
+    xmlns:local="using:OnlinerApp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:Template10.Controls"
