--- a/Onliner for windows 10/Onliner for windows 10/Themes/ContolsStyle.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Themes/ContolsStyle.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Onliner_for_windows_10">
+    xmlns:local="using:OnlinerApp">
 
     <Style x:Key="NewsPageHeadeMenuRadioButtonStyle2" TargetType="RadioButton">
         <Setter Property="Background" Value="Transparent"/>
