--- a/Onliner for windows 10/Onliner for windows 10/Themes/SplitViewThemes.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Themes/SplitViewThemes.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Onliner_for_windows_10.UserControls.SP">
+    xmlns:local="using:OnlinerApp.UserControls.SP">
 
 
     <SolidColorBrush x:Key="SystemAccentBrush" Color="{StaticResource SystemAccentColor}" />
