--- a/Onliner for windows 10/Onliner for windows 10/Tiles/TileTemplates/WideTile.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Tiles/TileTemplates/WideTile.xaml
@@ -1,11 +1,11 @@
 ﻿<UserControl
-    x:Class="Onliner_for_windows_10.Tiles.TileTemplates.WideTile"
+    x:Class="OnlinerApp.Tiles.TileTemplates.WideTile"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Onliner_for_windows_10.Tiles.TileTemplates"
+    xmlns:local="using:OnlinerApp.Tiles.TileTemplates"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-     xmlns:data="using:Onliner_for_windows_10.Tiles"
+     xmlns:data="using:OnlinerApp.Tiles"
     mc:Ignorable="d"
     d:DesignHeight="336"
     d:DesignWidth="691"
