--- a/Onliner for windows 10/Onliner for windows 10/Views/Message/MessagePage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/Message/MessagePage.xaml
@@ -1,22 +1,21 @@
 ﻿<!--#region  namespace-->
 <Page
-    x:Class="Onliner_for_windows_10.Model.Message.MessagePage"
+    x:Class="OnlinerApp.Views.Message.MessagePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     x:Name="MessagePageName"
     xmlns:Interactivity="using:Microsoft.Xaml.Interactivity"
-    xmlns:Core="using:Microsoft.Xaml.Interactions.Core" 
-    xmlns:local="using:Onliner_for_windows_10.Model.Message"
+    xmlns:Core="using:Microsoft.Xaml.Interactions.Core"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:uc="using:Onliner_for_windows_10.UserControls"
+    xmlns:uc="using:OnlinerApp.UserControls"
     xmlns:converter="using:Onliner.Converters.For_Messages"
     xmlns:converters="using:Onliner.Converters"
     xmlns:timeConverter="using:Onliner.Converters.For_Messages"
     xmlns:helper="using:Onliner.Helpers"
     xmlns:controls="using:Template10.Controls"
     xmlns:SW="using:Universal.UI.Xaml.Controls"
-    xmlns:UserControls="using:Onliner_for_windows_10.UserControls"
+    xmlns:UserControls="using:OnlinerApp.UserControls"
     mc:Ignorable="d">
     <!--#endregion-->
 
