--- a/Onliner for windows 10/Onliner for windows 10/Views/Message/MessageSenderPage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/Message/MessageSenderPage.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="Onliner_for_windows_10.Views.Message.MessageSenderPage"
+    x:Class="OnlinerApp.Views.Message.MessageSenderPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Onliner_for_windows_10.Views.Message"
+    xmlns:local="using:OnlinerApp.Views.Message"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:tem10Control="using:Template10.Controls"
