--- a/Onliner for windows 10/Onliner for windows 10/Views/News/FavoriteNewsView.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/News/FavoriteNewsView.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="Onliner_for_windows_10.Views.News.FavoriteNewsView"
+    x:Class="OnlinerApp.Views.News.FavoriteNewsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Onliner_for_windows_10.Views.News"
+    xmlns:local="using:OnlinerApp.Views.News"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:converter="using:Onliner.Converters"
