--- a/Onliner for windows 10/Onliner for windows 10/Views/NewsSectionPage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/NewsSectionPage.xaml
@@ -1,15 +1,15 @@
 ﻿<!--#region namespace -->
 <Page
-    x:Class="Onliner_for_windows_10.Views.NewsPage"
+    x:Class="OnlinerApp.Views.NewsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Onliner_for_windows_10"
+    xmlns:local="using:OnlinerApp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:Interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:Core="using:Microsoft.Xaml.Interactions.Core" 
-    xmlns:UserControls="using:Onliner_for_windows_10.UserControls"
-    xmlns:viewModel="using:Onliner_for_windows_10.Views"
+    xmlns:UserControls="using:OnlinerApp.UserControls"
+    xmlns:viewModel="using:OnlinerApp.Views"
     xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     xmlns:converter="using:Onliner.Converters"
