--- a/Onliner for windows 10/Onliner for windows 10/Views/Profile/SearchUserPage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/Profile/SearchUserPage.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="Onliner_for_windows_10.Views.Profile.SearchUserPage"
+    x:Class="OnlinerApp.Views.Profile.SearchUserPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Onliner_for_windows_10.Views.Profile"
+    xmlns:local="using:OnlinerApp.Views.Profile"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
      xmlns:Interactivity="using:Microsoft.Xaml.Interactivity"
