--- a/Onliner for windows 10/Onliner for windows 10/Views/ProfilePage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/ProfilePage.xaml
@@ -1,18 +1,16 @@
 ﻿<!--#region namespace-->
-<Page x:Class="Onliner_for_windows_10.ProfilePage.ProfilePage"
+<Page x:Class="OnlinerApp.Views.ProfilePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Onliner_for_windows_10.ProfilePage"
-    xmlns:UC="using:Onliner_for_windows_10.UserControls"
+      xmlns:UC="using:OnlinerApp.UserControls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:Onliner_for_windows_10="using:Onliner_for_windows_10"
-    xmlns:userControls="using:Onliner_for_windows_10.UserControls"
+    xmlns:OnlinerApp="using:OnlinerApp"
+    xmlns:userControls="using:OnlinerApp.UserControls"
     xmlns:controls="using:Template10.Controls"
     xmlns:converter="using:Onliner.Converters"
-    xmlns:tile="using:Onliner_for_windows_10.Tiles.TileTemplates"
-    xmlns:model="using:Onliner_for_windows_10.ProfilePage"
-    mc:Ignorable="d">
+    xmlns:tile="using:OnlinerApp.Tiles.TileTemplates"
+      mc:Ignorable="d">
 <!--#endregion-->
 
     <!--#region Resources-->
