--- a/Onliner for windows 10/Onliner for windows 10/Views/ViewNewsPage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/ViewNewsPage.xaml
@@ -1,33 +1,29 @@
 ﻿<!--#region  namespace-->
-    <Page
+<Page
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     x:Name="CommentsView"
-    xmlns:local="using:Onliner_for_windows_10.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:Behaviors="using:Template10.Behaviors"
-    xmlns:Core="using:Microsoft.Xaml.Interactions.Core"
-    xmlns:Interactivity="using:Microsoft.Xaml.Interactivity"
-    xmlns:Media="using:Microsoft.Xaml.Interactions.Media"
+    xmlns:core="using:Microsoft.Xaml.Interactions.Core"
+    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:controls="using:Template10.Controls"
     xmlns:conver="using:Onliner.Converters"
-    xmlns:Selector="using:Onliner.Model.DataTemplateSelector"
+    xmlns:selector="using:Onliner.Model.DataTemplateSelector"
     xmlns:toolkit="using:MyToolkit.Controls"
     xmlns:webviewhelper="using:Onliner.Helpers"
-    xmlns:UserControl="using:Onliner_for_windows_10.UserControls"
-    xmlns:pullToRefresh="using:PullToRefresh.UWP"
-    xmlns:animatedImage="using:Onliner_for_windows_10.UserControls.Image"
-    xmlns:viewModel="using:Onliner_for_windows_10.View_Model"
+    xmlns:userControl="using:OnlinerApp.UserControls"
+    xmlns:animatedImage="using:OnlinerApp.UserControls.Image"
     xmlns:commentsModel="using:Onliner.Model.News"
-    x:Class="Onliner_for_windows_10.Views.ViewNewsPage"
+    xmlns:viewModel1="using:OnlinerApp.ViewModel"
+    x:Class="OnlinerApp.Views.ViewNewsPage"
     mc:Ignorable="d">
-<!--#endregion-->
+    <!--#endregion-->
 
     <Page.DataContext>
-        <viewModel:ViewNewsViewModel x:Name="ViewModel"/>
+        <viewModel1:ViewNewsViewModel x:Name="ViewModel"/>
     </Page.DataContext>
-        
+
     <!--Region Resources-->
     <Page.Resources>
 
@@ -137,8 +133,8 @@
                 </Setter.Value>
             </Setter>
         </Style>
-        
-        <Selector:ListViewItemSelector
+
+        <selector:ListViewItemSelector
             x:Key="ListViewItemSelector"
             HeaderTemlate="{StaticResource HeaderTemlate}"
             TitleTemlate="{StaticResource TitleTemlate}"
@@ -299,7 +295,7 @@
                                                 <!--Time-->
                                                 <TextBlock Text="{x:Bind Time}" Grid.Row="0" Grid.Column="3" FontSize="14" TextAlignment="Right" VerticalAlignment="Center" Margin="2" Foreground="Gray" Grid.ColumnSpan="2" FontFamily="Segoe UI Light" HorizontalAlignment="Stretch" x:Phase="3"/>
                                                 <!--Content Viewer-->
-                                                <UserControl:CommentsContentViewer x:Name="CommentsContentViewer" UserControl:CommentsContentViewer.HtmlString="{x:Bind Data}" BorderThickness="1" FontSize="14" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" x:Phase="0"/>
+                                                <userControl:CommentsContentViewer x:Name="CommentsContentViewer" userControl:CommentsContentViewer.HtmlString="{x:Bind Data}" BorderThickness="1" FontSize="14" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="3" x:Phase="0"/>
                                                 <!--Like-->
                                                 <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Stretch" Margin="2" >
                                                     <Grid>
@@ -307,34 +303,34 @@
                                                         <TextBlock Text="&#xE0A5;" FontSize="14" Foreground="Red" FontFamily="Segoe MDL2 Assets" VerticalAlignment="Center" Visibility="{x:Bind Like, Converter={StaticResource BooleToVisible}}" x:Phase="2"/>
                                                     </Grid>
                                                     <TextBlock Text="{x:Bind LikeCount}" FontSize="14" Margin="2" VerticalAlignment="Center" Foreground="Gray" x:Phase="4"/>
-                                                    <Interactivity:Interaction.Behaviors>
-                                                        <Core:EventTriggerBehavior EventName="Tapped">
-                                                            <Core:InvokeCommandAction Command="{Binding ElementName=CommentsView, Path=DataContext.LikeCommentsCommand}" 
+                                                    <interactivity:Interaction.Behaviors>
+                                                        <core:EventTriggerBehavior EventName="Tapped">
+                                                            <core:InvokeCommandAction Command="{Binding ElementName=CommentsView, Path=DataContext.LikeCommentsCommand}" 
                                                                                               CommandParameter="{Binding ElementName=CommentsListView, Path=SelectedItem}"/>
-                                                        </Core:EventTriggerBehavior>
-                                                    </Interactivity:Interaction.Behaviors>
+                                                        </core:EventTriggerBehavior>
+                                                    </interactivity:Interaction.Behaviors>
                                                 </StackPanel>
                                                 <!--Answer-->
                                                 <StackPanel Width="Auto" Orientation="Horizontal" Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="2" Margin="2" HorizontalAlignment="Right">
                                                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Visibility="{Binding ElementName=CommentsView, Path=DataContext.CommentsButtonVisible, Converter={StaticResource BooleToVisible}, Mode=TwoWay}">
                                                         <TextBlock Text="&#xE10E;" FontFamily="Segoe MDL2 Assets" FontSize="14"  VerticalAlignment="Center" Foreground="Gray"/>
                                                         <TextBlock Text="Ответить" FontSize="14"  VerticalAlignment="Center" Margin="2,0,0,0" Foreground="Gray"/>
-                                                        <Interactivity:Interaction.Behaviors>
-                                                            <Core:EventTriggerBehavior EventName="Tapped">
-                                                                <Core:InvokeCommandAction Command="{Binding ElementName=CommentsView, Path=DataContext.AnswerCommentCommand}" 
+                                                        <interactivity:Interaction.Behaviors>
+                                                            <core:EventTriggerBehavior EventName="Tapped">
+                                                                <core:InvokeCommandAction Command="{Binding ElementName=CommentsView, Path=DataContext.AnswerCommentCommand}" 
                                                                                               CommandParameter="{Binding ElementName=NickNameTextBlock, Path=Text}"/>
-                                                            </Core:EventTriggerBehavior>
-                                                        </Interactivity:Interaction.Behaviors>
+                                                            </core:EventTriggerBehavior>
+                                                        </interactivity:Interaction.Behaviors>
                                                     </StackPanel>
                                                     <StackPanel Orientation="Horizontal" Margin="6,0,0,0" Visibility="{Binding ElementName=CommentsView, Path=DataContext.CommentsButtonVisible, Converter={StaticResource BooleToVisible}, Mode=TwoWay}">
                                                         <TextBlock Text="&#xE89B;" FontFamily="Segoe MDL2 Assets" FontSize="14"  VerticalAlignment="Center" Foreground="Gray"/>
                                                         <TextBlock Text="Цитировать" FontSize="14"  VerticalAlignment="Center" Margin="2,0,0,0" Foreground="Gray"/>
-                                                        <Interactivity:Interaction.Behaviors>
-                                                            <Core:EventTriggerBehavior EventName="Tapped">
-                                                                <Core:InvokeCommandAction Command="{Binding ElementName=CommentsView, Path=DataContext.AnswerQuoteCommentCommand}" 
+                                                        <interactivity:Interaction.Behaviors>
+                                                            <core:EventTriggerBehavior EventName="Tapped">
+                                                                <core:InvokeCommandAction Command="{Binding ElementName=CommentsView, Path=DataContext.AnswerQuoteCommentCommand}" 
                                                                                               CommandParameter="{Binding ElementName=CommentsListView, Path=SelectedItem}"/>
-                                                            </Core:EventTriggerBehavior>
-                                                        </Interactivity:Interaction.Behaviors>
+                                                            </core:EventTriggerBehavior>
+                                                        </interactivity:Interaction.Behaviors>
                                                     </StackPanel>
                                                 </StackPanel>
                                             </Grid>
@@ -344,7 +340,7 @@
                             </ListView>
                         </Grid>
                         <!--#endregion-->
-                        
+
                         <ProgressBar Foreground="Blue" Background="Transparent" IsIndeterminate="{Binding CommentsProgressRing}" VerticalAlignment="Top"/>
                         <Button x:Name="DownListButton" Width="32" Height="32" Grid.Row="0" 
                                 VerticalAlignment="Top"
@@ -399,11 +395,11 @@
                                  PlaceholderText="Введите сообщение"
                                  TextWrapping="Wrap"
                                  BorderThickness="0">
-                                <Interactivity:Interaction.Behaviors>
-                                    <Core:EventTriggerBehavior EventName="TextChanged">
-                                        <Core:InvokeCommandAction Command="{Binding SendButtonActive}"/>
-                                    </Core:EventTriggerBehavior>
-                                </Interactivity:Interaction.Behaviors>
+                                <interactivity:Interaction.Behaviors>
+                                    <core:EventTriggerBehavior EventName="TextChanged">
+                                        <core:InvokeCommandAction Command="{Binding SendButtonActive}"/>
+                                    </core:EventTriggerBehavior>
+                                </interactivity:Interaction.Behaviors>
                             </TextBox>
                             <Button Name="AddCommentButton"
                                 Content="&#xE724;" 
@@ -436,7 +432,7 @@
 
     </Grid>
     <!--#endregion-->
-    
+
     <Page.Transitions>
         <TransitionCollection>
             <PaneThemeTransition Edge="Left"/>
