--- a/Onliner for windows 10/Onliner for windows 10/Views/WeatherPage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/WeatherPage.xaml
@@ -1,18 +1,15 @@
 ﻿<!--#region  namespace-->
     <Page
-    x:Class="Onliner_for_windows_10.Views.WeatherPage"
-    xmlns:viewModelWeather="using:Onliner_for_windows_10.Views"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    x:Class="OnlinerApp.Views.WeatherPage"
+     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Onliner_for_windows_10.Views"
-    xmlns:Interactivity="using:Microsoft.Xaml.Interactivity"
-    xmlns:Core="using:Microsoft.Xaml.Interactions.Core" 
+    xmlns:interactivity="using:Microsoft.Xaml.Interactivity"
+    xmlns:core="using:Microsoft.Xaml.Interactions.Core" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:viewModel="using:Onliner_for_windows_10.View_Model"
     xmlns:converters="using:Onliner.Converters"
     xmlns:controls="using:Template10.Controls"
-    xmlns:vm="using:Onliner_for_windows_10.View_Model" mc:Ignorable="d">
+    mc:Ignorable="d">
     <!--°-->
 <!--#endregion-->
         
@@ -62,11 +59,14 @@
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition />
                 </Grid.ColumnDefinitions>
                 <TextBlock Text="{Binding dateTextDayOfWeek}" FontSize="22" FontWeight="Bold" TextAlignment="Center" Margin="0,0,0,2" Grid.Row="0" Grid.ColumnSpan="2" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
-                <TextBlock Text="{Binding dayOfMonth,Converter={StaticResource ScrubHtml}}" FontSize="18"  TextAlignment="Center" Margin="0,5,0,2" Grid.Row="1" Grid.ColumnSpan="2" Foreground="{ThemeResource ForegroundCustomBlackBrush}"/>
+                <TextBlock Text="{Binding dayOfMonth,Converter={StaticResource ScrubHtml}}" FontSize="18"  TextAlignment="Center" Margin="0,5,0,2" Grid.Row="1" Grid.ColumnSpan="2"
+                           Grid.Column="0" Foreground="{ThemeResource ForegroundCustomBlackBrush}"/>
 
-                <Image Stretch="Uniform" Width="70" Height="70" Grid.Row="2" Grid.ColumnSpan="2" Margin="2" HorizontalAlignment="Center" VerticalAlignment="Center" Source="{Binding falloutIcon, Converter={StaticResource Convert}}"/>
+                <Image Stretch="Uniform" Width="70" Height="70" Grid.Row="2" Grid.ColumnSpan="2" Grid.Column="0"
+                       Margin="2" HorizontalAlignment="Center" VerticalAlignment="Center" Source="{Binding falloutIcon, Converter={StaticResource Convert}}"/>
 
 
 
@@ -109,7 +109,7 @@
                 </Viewbox>
                 <TextBlock Text="{Binding humidityTitle}" FontSize="14" Grid.Row="7" TextAlignment="Center" Grid.Column="1"  Margin="0,5,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
 
-                <Grid Grid.Column="3" Grid.RowSpan="8">
+                <Grid Grid.Column="3" Grid.Row="0" Grid.RowSpan="8">
                     <Rectangle Fill="Gray" Width="1"/>
                 </Grid>
             </Grid>
@@ -129,7 +129,7 @@
         </Grid.RowDefinitions>
 
         <!-- Region Page Header-->
-        <controls:PageHeader x:Name="pageHeader" 
+        <controls:PageHeader x:Name="PageHeader" 
                              Frame="{x:Bind Frame}"
                              Text="Погода"
                              FontWeight="Bold"
@@ -175,11 +175,11 @@
                                   VerticalAlignment="Center" 
                                   ItemsSource="{Binding TownList}" 
                                   SelectedIndex="{Binding SelectedIndexItem}">
-                                <Interactivity:Interaction.Behaviors>
-                                    <Core:EventTriggerBehavior EventName="SelectionChanged">
-                                        <Core:InvokeCommandAction Command="{Binding ChngeTown}" CommandParameter="{Binding ElementName=TownChoise}"/>
-                                    </Core:EventTriggerBehavior>
-                                </Interactivity:Interaction.Behaviors>
+                                <interactivity:Interaction.Behaviors>
+                                    <core:EventTriggerBehavior EventName="SelectionChanged">
+                                        <core:InvokeCommandAction Command="{Binding ChngeTown}" CommandParameter="{Binding ElementName=TownChoise}"/>
+                                    </core:EventTriggerBehavior>
+                                </interactivity:Interaction.Behaviors>
                                 <ComboBox.ItemTemplate>
                                     <DataTemplate>
                                         <StackPanel>
@@ -236,6 +236,7 @@
                                    Grid.Row="0" 
                                    Grid.ColumnSpan="3"
                                    TextAlignment="Left"
+                                   MaxWidth="300"
                                    TextWrapping="Wrap"
                                    Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
                                 <TextBlock Text="Ветер: "
@@ -289,10 +290,12 @@
                     </ListView>
                 </ScrollViewer>
                 <!--EndRegion-->
-                <ProgressRing Name="WeatherProgressRing" Width="100" Height="100" Foreground="Blue" VerticalAlignment="Center" HorizontalAlignment="Center"  IsActive="{Binding CurrentProgress}" Grid.RowSpan="5"/>
+                <ProgressRing Name="WeatherProgressRing" Width="100" Height="100" Foreground="Blue" VerticalAlignment="Center" HorizontalAlignment="Center"  IsActive="{Binding CurrentProgress}"
+                              Grid.Row="0" Grid.RowSpan="5"/>
             </Grid>
         </ScrollViewer>
         <!--EndRegion-->
 
     </Grid>
 </Page>
+
